# cmake_embed_resource

./: .gitignore  README.md
cmake/: EmbedResource.cmake
example/: CMakeLists.txt  example.cpp
example/resources/subdir/: file_in_directory.txt
